Bug 703294: Fix Ghostscript build for Android

Header files shifted around so that the redefinition of printf happens
after cdefs.

Also removes redundant CONTDEVH definition from contrib/contrib.mak